--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: timeline-summary
   annotations:
+    cert-manager.io/issuer: "letsencrypt"
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/enable-cors: "true"
 spec:
@@ -21,6 +22,24 @@ spec:
     - hosts:
         - genai.superskill.me
       secretName: https
+
+---
+
+kind: Issuer
+apiVersion: cert-manager.io/v1
+metadata:
+  name: letsencrypt
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: robobays@gmail.com
+    profile: tlsserver
+    privateKeySecretRef:
+      name: letsencrypt
+    solvers:
+      - http01:
+          ingress:
+            ingressClassName: nginx
 
 ---
 
