--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "dependencies": {
+    "@google/genai": "^1.0.0",
     "express": "^4.19.2",
     "mongodb": "^6.0.0",
     "node-fetch": "^3.3.2",
